successfully styled footer and repaired overflow x

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 #App {
